@@ -1,3 +1,11 @@
+2017-02-22	"An unbreakable toy is useful for breaking other toys."  (2)
+
+		include/innocent-pear/lolwut.h :
+		- lolwut_impl<...> can now do pointers to const items
+
+		share/innocent-pear/doge-01.cc :
+		- ifunc hack now has a thin layer of pointer scrambling...
+
 2017-02-10	"An unbreakable toy is useful for breaking other toys."
 
 		README.md :
